# conda-lockfiles

./: .gitignore  CHANGELOG.md  HOW_WE_USE_GITHUB.md  README.md  RELEASE.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 0_bug.yml  1_feature.yml  epic.yml
.github/template-files/: config.yml
.github/template-files/templates/: issue_template_details.yml  lockfile_format.yml  pull_request_template_details.md
.github/workflows/: docs.yml  pypi.yml  test.yml
conda_lockfiles/: __init__.py  aliases.py  history.py  load_yaml.py  lockfile.py  plugin.py  records_from_conda_urls.py
conda_lockfiles/conda_lock/: v1.py
conda_lockfiles/rattler_lock/: v6.py  v7.py
docs/: format-aliases.md  getting-started.md  index.md
docs/developer/: maintaining.md
news/: 161-no-fetch-lockfile-export.md  yaml-serialize-deprecations
recipe/: meta.yaml
tests/: __init__.py  test_aliases.py  test_interop.py  test_loaders.py  test_records_from_conda_urls.py  test_requested_specs.py  test_roundtrip.py
tests/data/conda-lock-metadata/: conda-lock.yml  conda-lock.yml.original
tests/data/environments/single_package/: conda-lock.yml
tests/rattler_lock/: test_v6.py  test_v7.py
