[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "conda-lockfiles"
description = "Support different lockfiles in conda."
readme = "README.md"
authors = [{name = "Anaconda, Inc."}]
license = { file = "LICENSE" }
classifiers = [
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
requires-python = ">=3.10"
dependencies = [
  # "conda >=25.9.0",
  "ruamel.yaml",
  "pydantic>=2.12.5,<3"
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/conda-incubator/conda-lockfiles"

[project.entry-points.conda]
conda-lockfiles = "conda_lockfiles.plugin"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64", "linux-aarch64"]

[tool.pixi.dependencies]
python = ">=3.10"
conda = ">=26.3.0"
"ruamel.yaml" = "*"
pydantic = ">=2.12.5,<3"

[tool.pixi.pypi-dependencies]
conda-lockfiles = { path  = ".", editable = true }

[tool.pixi.tasks]
dev = 'python -c "import sys; print(sys.executable)"'

[tool.pixi.feature.build]
dependencies = { anaconda-client = "*", conda-build = "*" }
tasks = { build = "conda build recipe" }

[tool.pixi.feature.docs.tasks]
docs = { cmd = "python -m sphinx.cmd.build -M dirhtml . _build", cwd = "docs" }
serve = { cmd = "python -m http.server", cwd = "docs/_build/dirhtml" }
clean = { cmd = "rm -rf _build", cwd = "docs" }

[tool.pixi.feature.docs.dependencies]
python = "3.10.*"
conda-sphinx-theme = "*"
linkify-it-py = "*"
myst-parser = "*"
sphinx = "*"
sphinx-copybutton = "*"
sphinx-design = "*"
sphinx-reredirects = "*"
sphinx-sitemap = "*"
sphinxcontrib-programoutput = "*"

[tool.pixi.feature.test.tasks]
test = 'python -m pytest --cov=conda_lockfiles'
pre-commit = 'pre-commit'

[tool.pixi.feature.test.dependencies]
pytest = "7.4.3.*"
pytest-mock = "3.12.0.*"
pre-commit = "*"
pytest-cov = ">=6.1.1,<7"
# Used by cross-tool interop tests (tests/test_interop.py, marker ``interop``).
# Pixi is provided by the ambient setup-pixi action, only conda-lock needs
# to land in the test env itself.
conda-lock = "*"

[tool.pixi.feature.py310.dependencies]
python = "3.10.*"

[tool.pixi.feature.py311.dependencies]
python = "3.11.*"

[tool.pixi.feature.py312.dependencies]
python = "3.12.*"

[tool.pixi.feature.py313.dependencies]
python = "3.13.*"

[tool.pixi.feature.py314.dependencies]
python = "3.14.*"

[tool.pixi.environments]
dev = ["py310"]
build = ["build"]
docs = ["docs"]
test-py310 = ["test", "py310"]
test-py311 = ["test", "py311"]
test-py312 = ["test", "py312"]
test-py313 = ["test", "py313"]
test-py314 = ["test", "py314"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "conda_lockfiles/_version.py"

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]
omit = ["conda_lockfiles/_version.py"]
show_missing = true
skip_covered = true
sort = "Miss"

[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  # "--cov=conda_lockfiles",   # passed in test runner scripts instead (avoid debugger)
  "--cov-append",
  "--cov-branch",
  "--cov-report=term",  # print summary table to screen
  "--cov-report=xml",  # for codecov/codecov-action upload
  "--durations=16",  # show 16 slowest tests
  "--strict-markers",
  "--tb=native",
  "-vv",
]
markers = [
  "interop: cross-tool interop tests that invoke pixi or conda-lock as consumers of our exported lockfiles (skipped when the external tool is not on PATH)",
]

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
flake8-type-checking = {exempt-modules = [], strict = true}
# see https://docs.astral.sh/ruff/rules/
select = [
  # "D1",  # pydocstyle
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "FA",  # flake8-future-annotations
  "I",  # isort
  "ISC",  # flake8-implicit-str-concat
  "RUF100",  # Unused noqa directive
  "T10",  # flake8-debugger
  "TCH",  # flake8-type-checking
  "UP",  # pyupgrade
  "W",  # pycodestyle warnings
]
